@@ -57,9 +57,9 @@ N . Have (and document) a BEGIN_DIR relay cell that means "Connect to your
     - Use for something, so we can be sure it works.
     - Test and debug
 
-N - Send back RELAY_END cells on malformed RELAY_BEGIN.
+  o Send back RELAY_END cells on malformed RELAY_BEGIN.
 
-N - Change the circuit end reason display a little for reasons from
+  o Change the circuit end reason display a little for reasons from
     destroyed/truncated circuits.  We want to indicate both that we're
     closing because somebody told us to, and why they told us they wanted to
     close.
